# vacation_booker

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/backend/: main.py
backend/backend/routes/: chat.py  example_router.py  home.py  router.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/flights/: page.tsx  search-results.tsx
frontend/components/: ChatbotPopup.tsx  HotelsScatterPlot.tsx  ScatterPlot.tsx
