[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kevin He <haokunkevinhe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
openai = "^1.54.4"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
